--- a/styles/sass/partials/_sections.scss
+++ b/styles/sass/partials/_sections.scss
@@ -129,6 +129,8 @@ body {
 // Section: Home > Banner Image
 .bannerImage img {
     width: 100%;
+    background-size: cover;
+    background-position: center;
 }
 
 
